# ai-investment-assistant

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.lambda  README.md  docker-compose.yml  main.py  notes.txt  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: cicd.yml
app/: main.py
app/agents/: analyst.py  debate.py
app/api/: routes.py
app/core/: config.py  guardrails.py
app/db/: mongo.py
app/schemas/: analysis.py
app/services/: cache.py  data_ingestion.py  llm_router.py  rag_engine.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: Compare.jsx  Home.jsx  StockProfile.jsx
tests/: test_aira.py  test_db.ipynb  test_redis.py
