[project]
name = "ai-investment-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "litellm>=1.40.0",
    "loguru>=0.7.0",
    "motor>=3.4.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "redis[hiredis]>=5.0.0",
    "sentence-transformers>=3.0.0",
    "tenacity>=8.3.0",
    "uvicorn[standard]>=0.29.0",
]
